# claimcraft-creative

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  claimcraft-creative.html  dev_graph.py  docker-compose.db.yml  docker-compose.test.yml  docker-compose.yml  langgraph.json  nginx.conf  pyproject.toml
.trae/documents/: t2-engineering-and-experience.md
.trae/rules/: git-commit-message.md
assets/: charts.js
backend/: logging_uvicorn.json  manage.py  requirements.txt  seed_data.json
backend/api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/claimcraft/: __init__.py  asgi.py  media_views.py  settings.py  urls.py  wsgi.py
docker/mysql-init/: 01-create-db-users.sql
docker/postgres-init/: 01-create-db-users.sh
docs/: T0_spec.md  T1_spec.md  backend-user-auth-optimization-design.md  demo-image-prompts.md  demo-scenarios.md  frontend-display-design.md  frontend-static-performance-optimization.md  input-quality-guard-design.md  input-quality-guard-spec.md  langgraph-deployment.md  linux-kb-build-guide.md  plan.md  privacy-masking-upgrade-design.md  server-mail-service-deployment-guide.md  workflow-fullstack-upgrade-design.md  workflow-refactor-verification-guide.md  workflow-refactor-verification-report.md  workflow-ui-integration-assessment.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  App.vue  index.css  (+1 more)
scripts/: init-shared-db.sh
test/: test_ocr_strategies.py
(+339 files in other folders)
